testsuite/tests/parser/should_fail/T8501c.stderr

T8501c.hs:4:7: error:
    • Variable not in scope:
        mdo :: (String -> IO ()) -> [Char] -> IO ()
    • Perhaps you meant ‘mod’ (imported from Prelude)
      Perhaps you meant to use RecursiveDo
